--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <!-- <meta charset="utf-8"> -->
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <title>MovieList</title>
+  <h1>Movie List</h1>
   <!-- <link rel="stylesheet" href="styles/style.css"> -->
-  
 </head>
 <body>
   <div id="app"></div>
